# fk_ik

./: CMakeLists.txt  a.out  robot_kinematics.cpp  test.cpp
include/: robot_kinematics.hpp
src/: main.cpp  robot_kinematics.cpp
